# fin

./: pyproject.toml
fin/: blackfin.py  miclevel.py  notes.md  simple_game.py  test.py  visualizer.py  xbox360_controller.py
notes/: 2_all May 02 01:16:21.cusage  2_night.cusage  all May 01 01:39:53.cusage  all May 01 02:19:39.cusage  night.cusage  notes.md
tests/: test_fin.py
