[tool.poetry]
name = "fin"
version = "0.1.0"
description = ""
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
inputs = "^0.5"
pygame = "^1.9.6"
pyautogui = "^0.9.50"
sounddevice = "^0.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
